improve linux icon provider